# dropboxclone

./: .gitignore  README.md
client/: package-lock.json  package.json
client/src/: middleware.ts
client/src/app/: layout.tsx  page.tsx
client/src/app/(auth)/auth/: page.tsx
client/src/app/(protected)/dashboard/: page.tsx
client/src/components/auth/: LoginForm.tsx  SignupForm.tsx
client/src/components/dashboard/: DeleteConfirmDialog.tsx  FileUploadZone.tsx  FilesTable.tsx  Navbar.tsx
client/src/lib/: api.ts  types.ts  utils.ts
client/src/store/: auth-store.ts
server/: .gitignore  Typebox.postman_collection.json  auth.py  crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py
server/app/: __init__.py
server/app/api/: auth.py  files.py
server/app/core/: config.py  logging.py  security.py
server/app/db/: __init__.py  database.py  tables.py
server/app/models/: __init__.py  auth.py  file.py  user.py
server/app/services/: auth_service.py  file_service.py  user_service.py
